# ppl_detection_catkinized

./: CMakeLists.txt  README.md  package.xml
launch/: kinect.launch  ppl_detection.launch  ppl_detection_legacy.launch
src/: kinect_detect.cpp
