<?xml version="1.0"?>
<package>
  <name>ppl_detection</name>
  <version>0.0.4</version>
  <description>

     People detection using the Microsoft Kinect

  </description>
  
  <license>BSD</license>
  <maintainer email="www@ww.ww">Soh De Loong</maintainer>
  <author>Soh De Loong</author>

  <url type="website">http://ros.org/wiki/ppl_detection</url>

  <!-- Use build_depend for packages you need at compile time: -->
  <build_depend>message_generation</build_depend>

  <!-- Use run_depend for packages you need at runtime: -->
  <run_depend>message_runtime</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>

  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

  <buildtool_depend>rospy</buildtool_depend>
  <run_depend>rospy</run_depend>

  <buildtool_depend>roscpp</buildtool_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>laser_geometry</build_depend>
  <run_depend>laser_geometry</run_depend>

  <build_depend>pcl_ros</build_depend>
  <run_depend>pcl_ros</run_depend>

  <build_depend>pcl_visualization</build_depend>
  <run_depend>pcl_visualization</run_depend>

  <build_depend>visualization_msgs</build_depend>
  <run_depend>visualization_msgs</run_depend>

  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>  

</package>


